Runnable GF Embedded: Add Add-Opens and Add-Exports to MANIFEST
These match the configuration in the default GlassFish server domain.xml. 
With this it's no longer needed to specify --add-opens and --add-exports on the command line.