@@ -1514,6 +1514,8 @@
                                     <Multi-Release>true</Multi-Release>
                                     <Bundle-SymbolicName>org.glassfish.main.embedded.web</Bundle-SymbolicName>
                                     <Main-Class>org.glassfish.runnablejar.UberMain</Main-Class>
+                                    <Add-Opens>java.base/java.lang java.base/java.io java.base/java.util java.base/sun.nio.fs java.base/sun.net.www.protocol.jrt java.naming/javax.naming.spi java.rmi/sun.rmi.transport jdk.management/com.sun.management.internal java.base/jdk.internal.vm.annotation</Add-Opens>
+                                    <Add-Exports>java.naming/com.sun.jndi.ldap java.base/jdk.internal.vm.annotation</Add-Exports>
                                 </manifestEntries>
                             </archive>
                         </configuration>
